# travis-cpp-test

./: .gitignore  .travis.yml  CMakeLists.txt  conanfile.py  conanfile.txt  test.cpp  vs.code-workspace
src/: CMakeLists.txt  src.cpp  src.hpp
test/: CMakeLists.txt  test.cpp
test_package/: CMakeLists.txt  conanfile.py
tools/cmake/: gtest.cmake
