add_executable(testcase test.cpp $<TARGET_OBJECTS:src>)
# target_link_options(testcase PRIVATE -coverage)
target_include_directories(testcase PRIVATE $<TARGET_PROPERTY:src,INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(testcase CONAN_PKG::gtest)
add_test(NAME testcase COMMAND $<TARGET_FILE:testcase>)
